# faws

./: .$presentation-diagrams.drawio.bkp  .$presentation-diagrams.drawio.dtmp  .gitignore  .gitmodules  PAYOUTS.MD  README.md  TODO.MD  docker-compose.yaml  package-lock.json  package.json
contract/: README.md  create_bounty.sh  deploy.sh  helper.sh  package.json
contract-js/: README.md  build-all.sh  build.sh  deploy.sh  package.json  tsconfig.json
contract-js/__tests__/: node.spec.ts
contract-js/contract/neardev/: dev-account
contract-js/neardev/: dev-account  dev-account.env
contract-js/src/: bounty.ts  coordinator.ts  node.ts
contract-rust/: Cargo.toml  README.md  deploy.sh  localnet-deploy.sh
contract-rust/bounty/: Cargo.toml
contract-rust/contract/neardev/: dev-account.env
contract-rust/coordinator/: Cargo.toml  README.MD
contract-rust/coordinator/src/: events.rs  lib.rs  util.rs
contract-rust/coordinator/src/bounty/: mod.rs
contract-rust/coordinator/src/coordinator/: mod.rs
contract-rust/coordinator/src/node/: mod.rs
contract-rust/coordinator/tests/: coordinator.rs
contract-rust/node/: Cargo.toml
contract-rust/node/src/: lib.rs
contract-rust/src/: coordinator.rs  lib.rs
contract/coordinator/: Cargo.toml
contract/coordinator/src/: events.rs  lib.rs
contract/coordinator/tests/: coordinator.rs
contract/neardev/: dev-account  dev-account.env
contract/src/: bounty.ts  contract.ts  hello.ts  node.ts  oracle.ts
contract/tests/: oracle.ava.ts
execution-client/: .env  .env.bak  .env.example  .gitignore  README.MD  config.ts  database.ts  errors.ts  execution.ts  index.ts  lib.ts  logger.ts  package-lock.json  package.json  tsconfig.json  types.d.ts  types.ts  util.ts
execution-client/tests/: execution-client.test.ts
frontend/: .env  .env.bak  near-wallet.js  package-lock.json  package.json  start.sh  tsconfig.json  webpack.config.js
frontend/.parcel-cache/: 2513ab81beed8c12.txt  2f0fee3215ff90eb  408ea8bba95a8e84  51ea8fb016c64eb8  lock.mdb
frontend/assets/: Untitled.afdesign  global.scss
frontend/src/: App.tsx  app.tsx  index.html  index.tsx  storage.ts  types.d.ts
frontend/src/bounties/: Bounties.tsx
frontend/src/bounty/: Bounty.tsx  BountyMonitor.tsx  CreateBounty.tsx  ExistingBounty.tsx  bounty-detail.tsx  bounty-monitor.tsx  create-bounty.tsx  existing-bounty.tsx  types.ts  update-bounty-modal.tsx
frontend/src/common/: NavBar.tsx  load-chain-data.ts  nav-bar.tsx  near-interface.ts  near-wallet.ts  (+1 more)
graveyard/: Cargo.toml  README.MD
graveyard/old-execution-client-frontend/: README.MD  custom.d.ts  index.html  package.json  tsconfig.json  webpack.config.js
graveyard/src/: main.rs
integration-tests-js/: ava.config.cjs  nodemon.sh  package-lock.json
integration-tests-js/src/: main.ava.ts
lightweight-indexer/: Cargo.toml  README.MD
lightweight-indexer/src/: configs.rs  event.rs  main.rs
neardev/: dev-account  dev-account.env
playbook/: install-client.yaml  install-docker.yaml  install-system.yaml  install-tools.yaml  install.sh  install.sh.bak  playbook.yaml
playbook/execution-client/: main.yaml
playbook/files/: default.env.j2
playbook/tasks/: install-client.yaml  install-docker.yaml  install-nodejs.yaml  install-nvm.yaml  install-service.yaml  install-system.yaml  source_nvm.yaml
(+17 files in other folders)
