[package]
name = "indexer-example"
version = "0.0.0"
authors = ["example"]
publish = false
# Please update rust-toolchain.toml as well when changing version here:
rust-version = "1.64.0"
edition = "2021"

[dependencies]
actix = "0.13.0"
actix-web = "=4.1.0"
anyhow = "1.0.62"
clap = { version = "3.1.6", features = ["derive", "env"] }
openssl-probe = "0.1.4"
serde_json = "1.0.68"
tokio = { version = "1.16.1", features = ["fs", "macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = { version = "0.1.36", features = ["std"] }
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "fmt", "registry", "std"] }

near-indexer = { git = "https://github.com/near/nearcore", rev = "1.29.0" }
