[package]
name = "coordinator"
version = "1.0.0"
authors = ["ad0ll <ad0ll@ad0ll.io>",
    "amit <amit@need.his.email.dev>"]
edition = "2021"

[lib]
name= "coordinator"
#crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.0.0"
uint = { version = "0.9.3", default-features = false }
chrono = "0.4"
rand = "0.8.5"
regex = "1.6.0"
lazy_static = "1.4.0"
getrandom = { version = "0.2.7", features = ["js"] } # This is a dependency of rand, but we need to specify it explicitly for wasm32-unknown-unknown target
borsh = "0.9"
near-units = "0.2.0"
serde_json = "1.0" # Not sure if this is required, but tutorial shows it

# These are used for integration tests, which don't build against wasm32
# wasm32 builds will fail, if some/all of these are included under [dependencies]
[dev-dependencies]
anyhow = "1.0"
borsh = "0.9"
tokio = { version = "1", features = ["full"] }
near-workspaces = "0.5.0"
near-sandbox-utils = "0.5.0"
near-sdk = "4.0.0"
uint = { version = "0.9.3", default-features = false }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
